--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Absar Web Editor</title>
+<title>Tic Tac Toe in Javascript</title>
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
